--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -14,7 +14,7 @@
   from: 2023
   to: 2023
   description:  <b><i>SpotIQ</i> | <i>Backend + Frontend + ML Engineer</i></b>
-                <br><br><b>❯❯</b>&nbsp;&nbsp; ThoughtSpot is a fast paced BI product company where I've worked in a multi-disciplinary environment building complex systems from the ground up as a frontend, backend and ML engineer; responsible for SpotIQ, ThoughtSpot's AI engine.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; ThoughtSpot is a fast paced BI product company where I've worked in a multi-disciplinary environment building complex systems from the ground up as a backend, frontend and ML engineer; responsible for SpotIQ, ThoughtSpot's AI engine.
                 <br><br><b>❯❯</b>&nbsp;&nbsp; By the end of tenure, led a dozen peers, drove technical decision making, re-architected SpotIQ, and had 300+ commits.
                 <br><br><b>❯❯</b>&nbsp;&nbsp; Integrated DataRobot into ThoughtSpot, formulating the next generation of SpotIQ in the process. Expanded Cortex's responsibilities to support multi-tenant containerized AutoML, designed data caching, transport and all major flows.
                 <br><br><b>❯❯</b>&nbsp;&nbsp; Designed contextual key driver analysis explaining unexpected changes in customer metrics; leveraged LLM gateways for prompt engineering insight narratives; drastically cut down SpotIQ tech-debt; Majorly improved time-series forecasting.
