--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,12 @@
+- title: Software Engineering Intern
+  organisation: Apple
+  website: https://www.apple.com/
+  location: Cupertino, California
+  from: 2024
+  to: Present
+  description: <b><i>Search Ads Platform</i> | <i>Engineering</i></b>
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Upcoming Intern in Apple's Search Ads platform, working on anomaly detection and attribution using generative AI in the cloud.
+
 - title: Graduate Student
   organisation: Arizona State University
   website: https://asu.edu/
