--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,17 +1,17 @@
 - title: Software Engineering Intern
   organisation: Apple
   website: https://www.apple.com/
-  location: Cupertino, California
+  location: Cupertino, CA
   from: 2024
   to: Present
   description:  <b><i>Search Ads</i> | <i>Engineering</i></b>
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Championed and built a new production-ready GenAI platform for ad metrics alerting, attribution, anomaly detection and an elegant modular knowledge recall framework through Retrieval Augmented Generation (RAG), leveraging Apple's foundation models.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Championed and built a new production-ready GenAI platform for search ads alerting, attribution, anomaly detection and an elegant modular knowledge recall framework through Retrieval Augmented Generation (RAG), leveraging Apple's foundation models.
                 <br><br><b>❯❯</b>&nbsp;&nbsp; Set up associated OAuth, pipelines for containerization and CI/CD using Jenkins and Spinnaker for production deployments to EKS.
 
 - title: Graduate Student
   organisation: Arizona State University
   website: https://asu.edu/
-  location: Tempe, Arizona
+  location: Tempe, AZ
   from: 2023
   to: Present
   description: <b><i>Master of Science</i> | <i>Computer Science</i></b>
@@ -20,19 +20,19 @@
 - title: Member of Technical Staff 4
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
-  location: Bengaluru, Karnataka
+  location: Bengaluru, KA
   from: 2023
   to: 2023
   description:  <b><i>SpotIQ</i> | <i>Backend + Frontend + ML Engineer</i></b>
                 <br><br><b>❯❯</b>&nbsp;&nbsp; ThoughtSpot is a fast paced BI product company solving natural language search and leveraging Generative AI to unearth insights from data. I was responsible for SpotIQ, ThoughtSpot's AI engine, building and scaling ML based insight generation.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; By the end of my tenure, I drove technical decision making and led efforts to re-architect SpotIQ, with 300+ PRs in one year.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; By the end of my tenure, I led technical decision making and drove efforts to re-architect the product, with 300+ PRs in one year.
                 <br><br><b>❯❯</b>&nbsp;&nbsp; Working in multiple frontend, backend and ML stacks, I integrated DataRobot end-to-end into ThoughtSpot. Expanded our in-house AutoML engine Cortex to support multi-tenant containerization, designed the data caching layer, data transport and all major flows.
                 <br><br><b>❯❯</b>&nbsp;&nbsp; Designed contextual key driver analysis explaining unexpected changes in customer metrics; leveraged GPT LLMs for prompt engineering insight narratives. Drastically cut down SpotIQ tech debt, resulting in team-wide productivity improvements.
 
 - title: Member of Technical Staff 3
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
-  location: Bengaluru, Karnataka
+  location: Bengaluru, KA
   from: 2022
   to: 2023
   description:  <b><i>SpotIQ</i> | <i>Backend + Frontend + ML Engineer</i></b>
@@ -43,7 +43,7 @@
 - title: Member of Technical Staff 2
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
-  location: Bengaluru, Karnataka
+  location: Bengaluru, KA
   from: 2021
   to: 2022
   description:  <b><i>SpotIQ</i> | <i>Backend + Frontend Engineer</i></b>
@@ -53,7 +53,7 @@
 - title: Software Engineer
   organisation: Societe Generale
   website: https://globalsolution.societegenerale.com/en/
-  location: Bengaluru, Karnataka
+  location: Bengaluru, KA
   from: 2020
   to: 2021
   description:  <b><i>Digital Workplace Services</i> | <i>Fullstack Developer</i></b>
@@ -62,7 +62,7 @@
 - title: Undergraduate Student
   organisation: PES University
   website: https://pes.edu/
-  location: Electronic City Campus, Bengaluru, Karnataka
+  location: Electronic City Campus, Bengaluru, KA
   from: 2016
   to: 2020
   description: <b><i>Bachelors of Engineering</i> | <i>Computer Science & Engineering</i></b>
@@ -72,14 +72,14 @@
 - title: Lead Video Producer | Director
   organisation: Biz Doors
   website: http://bizdoors.com/
-  location: Bengaluru, Karnataka
+  location: Bengaluru, KA
   from: 2015
   to: 2016
   description: <b>❯❯</b>&nbsp;&nbsp; A side-gig during my 12th grade. Was in charge principle photography, creative direction and editing in the production of videos for corporate clients.
 
 - title: PC Building
   organisation: Self Employed
-  location: Bengaluru, Karnataka
+  location: Bengaluru, KA
   from: 2013
   to: 2015
   description: <b>❯❯</b>&nbsp;&nbsp; A side-hustle while I was in High School. Researched, picked, and assembled parts along with troubleshooting and setup for friends, family and acquaintances.
