Migrate Resume to LaTeX

--- a/_data/achievements.yml
+++ b/_data/achievements.yml
@@ -1,12 +1,12 @@
-- title: Cortex - Mine actionable insights on key metrics from freshly ingested data
+- title: Mine actionable insights on key metrics from freshly ingested data
   achievement: US Patent and Trademark Office
   date: 2022
-  description: Co-invented Cortex, a novel paradigm for anomaly detection through time series forecast deviations and AutoML.
+  description: Co-invented Cortex, a novel paradigm for anomaly detection through time-series forecast deviations and AutoML
 
 - title: R&D Excellence Award
   achievement: ThoughtSpot
   date: 2022
-  description: Took strong ownership of SpotIQ. Was consistent on high impact deliverables with diligence, customer empathy and agility.
+  description: Took strong ownership of SpotIQ, was consistent with high impact deliverables, showcasing diligence and agility
 
 - title: 1st Place
   achievement: InGenius Hackathon
