--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,12 +1,13 @@
-- title: Software Engineering Intern
-  organisation: Apple
+- title: Software Engineer Intern
+  organisation: Apple Inc.
   website: https://www.apple.com/
   location: Cupertino, CA
   from: 2024
   to: Present
   description:  <b><i>Search Ads</i> | <i>Engineering</i></b>
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Championed and built a new production-ready GenAI platform for search ads alerting, attribution, anomaly detection and an elegant modular knowledge recall framework through Retrieval Augmented Generation (RAG), leveraging Apple's foundation models.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Set up associated OAuth, pipelines for containerization and CI/CD using Jenkins and Spinnaker for production deployments to EKS.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Built a production-ready GenAI platform with React and FastAPI, leveraging Apple's JAX foundation models for App Store search ads alerting, attribution and anomaly detection by orchestrating resources on AWS with OAuth and RBAC
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Developed a chatbot with an elegant modular knowledge recall framework using Retrieval Augmented Generation (RAG)
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Set up pipelines for Docker, knowledge generation and CI/CD using Jenkins and Spinnaker for deployments to EKS
 
 - title: Graduate Student
   organisation: Arizona State University
@@ -20,49 +21,47 @@
 - title: Member of Technical Staff 4
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
-  location: Bengaluru, KA
+  location: Bangalore, KA
   from: 2023
   to: 2023
   description:  <b><i>SpotIQ</i> | <i>Backend + Frontend + ML Engineer</i></b>
-                <br><br><b>❯❯</b>&nbsp;&nbsp; ThoughtSpot is a fast paced BI product company solving natural language search and leveraging Generative AI to unearth insights from data. I was responsible for SpotIQ, ThoughtSpot's AI engine, building and scaling ML based insight generation.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; By the end of my tenure, I led technical decision making and drove efforts to re-architect the product, with 300+ PRs in one year.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Working in multiple frontend, backend and ML stacks, I integrated DataRobot end-to-end into ThoughtSpot. Expanded our in-house AutoML engine Cortex to support multi-tenant containerization, designed the data caching layer, data transport and all major flows.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Designed contextual key driver analysis explaining unexpected changes in customer metrics; leveraged GPT LLMs for prompt engineering insight narratives. Drastically cut down SpotIQ tech debt, resulting in team-wide productivity improvements.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; SpotIQ is ThoughtSpot's AI engine, where I built and scaled ML based insight generation, progressing from junior IC to leading technical decision making, driving efforts to re-architect the product with 300+ PRs by the end of my tenure
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Working with React, GraphQL, Java, C++, Python, Go, EC2, RDS and Postgres, I expanded Cortex, our in-house Machine Learning engine, to support multi-tenancy, designed the data caching layer, data transport and all major APIs
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Built key driver analysis for changes in user metrics, and drastically reduced tech debt, improving team-wide productivity
 
 - title: Member of Technical Staff 3
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
-  location: Bengaluru, KA
+  location: Bangalore, KA
   from: 2022
   to: 2023
   description:  <b><i>SpotIQ</i> | <i>Backend + Frontend + ML Engineer</i></b>
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Incubated and built SpotIQ Cortex, a highly scalable general-purpose time series forecasting and anomaly detection service with MLOps for heterogeneous model orchestration, model ensembling, invalidation and retraining on new data ingress.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Cortex allowed us to dynamically forecast and predict customer KPIs, enabling anomaly based alerting and better insights.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Conceptualized and implemented custom time period comparison and live monitoring on non-Gregorian time series KPIs.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Researched and built SpotIQ Cortex, a highly scalable general-purpose time-series forecasting and anomaly detection service with MLOps for heterogeneous model orchestration, ensembling, invalidation and retraining on new data ingress, allowing us to dynamically predict customer KPIs using Meta's Prophet and LinkedIn's Greykite
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Implemented anomaly based alerting, custom calendar time period comparison and live monitoring of time-series KPIs
 
 - title: Member of Technical Staff 2
   organisation: ThoughtSpot
   website: https://www.thoughtspot.com/
-  location: Bengaluru, KA
+  location: Bangalore, KA
   from: 2021
   to: 2022
   description:  <b><i>SpotIQ</i> | <i>Backend + Frontend Engineer</i></b>
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Made major improvements to SpotIQ's C++ codebase including error tolerance and test coverage. Caught and fixed a large number of critical bugs, allowing for new use cases by increasing query efficiency over CDWs along with SpotIQ's reliability.
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Developed SpotIQ's V2 experience in Java, took ownership of Comparative and R Analysis. Improved schema management in a cron scheduler written in Go. Reduced build times by optimizing rule execution in Bazel. Wrote Jenkins pipelines for data ETL.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Made major refactors and improvements to SpotIQ's C++ codebase including error tolerance and test coverage. Caught and fixed several critical bugs, increasing query efficiency over CDWs and improving reliability, leading to new use cases
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Designed and built SpotIQ's next generation Tomcat Java APIs, improved schema management in a cron scheduler written in Go, and reduced build times by optimizing rule execution in Bazel. Wrote Jenkins pipelines in Groovy for data ETL
 
 - title: Software Engineer
   organisation: Societe Generale
   website: https://globalsolution.societegenerale.com/en/
-  location: Bengaluru, KA
+  location: Bangalore, KA
   from: 2020
   to: 2021
   description:  <b><i>Digital Workplace Services</i> | <i>Fullstack Developer</i></b>
-                <br><br><b>❯❯</b>&nbsp;&nbsp; Built an analytics platform on Azure. Created a quiz and survey platform on the MERN stack with asynchronous session persistence.
+                <br><br><b>❯❯</b>&nbsp;&nbsp; Built an asynchronous session persistent quiz platform with surveys and analytics using MongoDB, Express and Node.js
 
 - title: Undergraduate Student
   organisation: PES University
   website: https://pes.edu/
-  location: Electronic City Campus, Bengaluru, KA
+  location: Bangalore, KA
   from: 2016
   to: 2020
   description: <b><i>Bachelors of Engineering</i> | <i>Computer Science & Engineering</i></b>
@@ -72,14 +71,14 @@
 - title: Lead Video Producer | Director
   organisation: Biz Doors
   website: http://bizdoors.com/
-  location: Bengaluru, KA
+  location: Bangalore, KA
   from: 2015
   to: 2016
   description: <b>❯❯</b>&nbsp;&nbsp; A side-gig during my 12th grade. Was in charge principle photography, creative direction and editing in the production of videos for corporate clients.
 
 - title: PC Building
   organisation: Self Employed
-  location: Bengaluru, KA
+  location: Bangalore, KA
   from: 2013
   to: 2015
   description: <b>❯❯</b>&nbsp;&nbsp; A side-hustle while I was in High School. Researched, picked, and assembled parts along with troubleshooting and setup for friends, family and acquaintances.
