--- a/_data/achievements.yml
+++ b/_data/achievements.yml
@@ -1,6 +1,6 @@
-- title: Mine actionable insights on key metrics from freshly ingested data
-  achievement: US Patent and Trademark Office
-  date: 2022
+- title: Insight Mining Using Machine Learning
+  achievement: Patent No. US-20240046144-A1 | US Patent and Trademark Office
+  date: 2024
   description: Co-invented Cortex, a novel paradigm for anomaly detection through time-series forecast deviations and AutoML
 
 - title: R&D Excellence Award
