Fix font styling on Safari

--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Gokul Vasudeva
-  email             : gokul.vasda@gmail.com
+  email             : gokulvsd@icloud.com
   github            : GokulVSD
   linkedin          : gokulvsd
   twitter           : GokulVSD
   facebook          : gokul.vsd
   instagram         : gokulvsd
-  youtube           : GokulVSD1
+  youtube           : \@GokulVSD
 
 
 ### Posts ###
