--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   github            : GokulVSD
   linkedin          : gokulvsd
   twitter           : GokulVSD
-  facebook          : gokul.vsd
+  facebook          : gokulvsd
   instagram         : gokulvsd
   youtube           : \@GokulVSD
 
